cmake_minimum_required(VERSION 3.13)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled "main.cpp" resources/SortedStrings.cpp resources/SortedStrings.h resources/library_1.h resources/Person.cpp resources/Person.h resources/ReversibleString.cpp resources/ReversibleString.h resources/ImageWeighted.h resources/FileStreamEx.h resources/OverloadOperator.h resources/AvgTemperature2.h resources/BlockMass.h)