cmake_minimum_required(VERSION 3.13)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled "main.cpp" resources/SortedStrings.cpp resources/SortedStrings.h resources/library_1.h resources/Person.cpp resources/Person.h resources/ReversibleString.cpp resources/ReversibleString.h resources/ImageWeighted.h resources/FileStreamEx.h resources/OverloadOperator.h resources/AvgTemperature2.h resources/BlockMass.h resources/PrintContainers.h resources/FunctionsTemplateTask.h resources/UnitTest.h resources/UnitTest.cpp resources/Rectangle.cpp resources/Rectangle.h resources/UsingIterators.h resources/UsingIterators.cpp resources/UsingIterators_test.cpp resources/UsingIterators_test.h resources/StringSplit.cpp resources/StringSplit.h resources/StringSplit_test.h resources/StringSplit_test.cpp resources/Benchmark.cpp resources/Benchmark.h resources/RemoveDuplicates.h resources/RemoveDuplicates_test.h resources/FindNearestElements.cpp resources/FindNearestElements.h resources/FindNearestElement_test.h)